--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.17.3",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
