--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@google-cloud/documentai": "^9.5.0",
     "@google-cloud/storage": "^7.17.3",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
